force-app/main/default/objects/Exhibition_Vehical_Booking__c/Exhibition_Vehical_Booking__c.object-meta.xml
<CustomObject>
    <label>Vehical Booking</label>
    <nameField>
        <label>Vehical Booking Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehical Bookings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>