force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Arrival_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Flight_No__c</fullName>
    <label>Arrival Flight No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>