force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Arrival_Mode__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Mode__c</fullName>
    <label>Arrival Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planes</fullName>
            </value>
            <value>
                <fullName>Trains</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>