force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Arrival_Point_Id__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Point_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Point Id</label>
    <referenceTo>Exhibition_Hotel__c</referenceTo>
    <relationshipLabel>Vehical Bookings</relationshipLabel>
    <relationshipName>Vehical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>