force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Assistant_Use_Time__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Use_Time__c</fullName>
    <formula>IF(
    ISBLANK(Vehicle_Allocation_Schedule__r.Use_Time__c), 
    NULL, 
    (Vehicle_Allocation_Schedule__r.Use_Time__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant Use Time</label>
    <type>Text</type>
</CustomField>