force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Assistant_Vehicle_Num__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Vehicle_Num__c</fullName>
    <formula>IF(
    ISBLANK(Vehicle_Allocation_Schedule__r.Assigned_Vehicle__r.Name), 
    NULL, 
    (Vehicle_Allocation_Schedule__r.Assigned_Vehicle__r.Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant Vehicle Num</label>
    <type>Text</type>
</CustomField>