force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Cancel_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Arrangement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Arrangement</label>
    <type>Checkbox</type>
</CustomField>