force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/DepartureAirline__c.field-meta.xml
<CustomField>
    <fullName>DepartureAirline__c</fullName>
    <formula>Exhibition_Arrangement__r.Inbound_Flight_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DepartureAirline</label>
    <type>Text</type>
</CustomField>