force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Designated_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Designated_Hotel__c</fullName>
    <formula>Exhibition_Arrangement__r.Designated_Hotel__c</formula>
    <label>Designated Hotel</label>
    <type>Checkbox</type>
</CustomField>