force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Driver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Driver_Phone__c</fullName>
    <label>Driver Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>