force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time__c</fullName>
    <description>预计时间</description>
    <inlineHelpText>根据行李数预估的时间</inlineHelpText>
    <label>Estimated Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>