force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Exhibition_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Arrangement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Arrangement</label>
    <referenceTo>Exhibition_Arrangement__c</referenceTo>
    <relationshipLabel>Vehical Bookings</relationshipLabel>
    <relationshipName>Vehical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>