force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <formula>ExpoInfo_Id__r.Name +&apos; &apos;+  ExpoInfo_Id__r.TitleEN__c</formula>
    <label>Exhibition Management</label>
    <type>Text</type>
</CustomField>