force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Expo_Vehicle_Info__c.field-meta.xml
<CustomField>
    <fullName>Expo_Vehicle_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expo Vehicle Info</label>
    <referenceTo>Expo_Vehicle_Info__c</referenceTo>
    <relationshipLabel>Vehical Bookings</relationshipLabel>
    <relationshipName>Vehical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>