force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Guest_Region__c.field-meta.xml
<CustomField>
    <fullName>Guest_Region__c</fullName>
    <formula>Internal_Registration__r.Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Region</label>
    <type>Text</type>
</CustomField>