force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <formula>Exhibition_Arrangement__r.Hotel_Name__c</formula>
    <label>Hotel Name</label>
    <type>Text</type>
</CustomField>