force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/If_Cancel__c.field-meta.xml
<CustomField>
    <fullName>If_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If Cancel</label>
    <type>Checkbox</type>
</CustomField>