force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/IfCommander__c.field-meta.xml
<CustomField>
    <fullName>IfCommander__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IfCommander</label>
    <type>Checkbox</type>
</CustomField>