force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Internal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Internal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Registration</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Vehical Bookings</relationshipLabel>
    <relationshipName>Vehical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>