force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Internal_Registration_Invisible__c.field-meta.xml
<CustomField>
    <fullName>Internal_Registration_Invisible__c</fullName>
    <formula>Exhibition_Arrangement__r.Internal_Registration__c</formula>
    <label>Internal Registration Invisible</label>
    <type>Text</type>
</CustomField>