force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Is_Await__c.field-meta.xml
<CustomField>
    <fullName>Is_Await__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Await</label>
    <type>Checkbox</type>
</CustomField>