force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Is_Verify__c.field-meta.xml
<CustomField>
    <fullName>Is_Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Verify</label>
    <type>Checkbox</type>
</CustomField>