force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Is_Warn__c.field-meta.xml
<CustomField>
    <fullName>Is_Warn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Warn</label>
    <type>Checkbox</type>
</CustomField>