force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Need_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Need_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否需要班车，默认不需要</description>
    <label>Need Vehicle</label>
    <type>Checkbox</type>
</CustomField>