force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Pick_Off_Point__c.field-meta.xml
<CustomField>
    <fullName>Pick_Off_Point__c</fullName>
    <label>Pick Off Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>