force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Plate_Number__c</fullName>
    <label>Plate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>