force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Departure_Time__c</fullName>
    <label>Return Departure Time</label>
    <type>Time</type>
</CustomField>