force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Driver__c.field-meta.xml
<CustomField>
    <fullName>Return_Driver__c</fullName>
    <formula>IF(
ISBLANK(Return_Vehicle_Schedule__r.Assigned_Vehicle__r.driver__c),
NULL,
(Return_Vehicle_Schedule__r.Assigned_Vehicle__r.driver__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Driver</label>
    <type>Text</type>
</CustomField>