force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_If_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Return_If_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return If Cancel</label>
    <type>Checkbox</type>
</CustomField>