force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Is_Arranged__c.field-meta.xml
<CustomField>
    <fullName>Return_Is_Arranged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Is Arranged</label>
    <type>Checkbox</type>
</CustomField>