force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Luggage__c.field-meta.xml
<CustomField>
    <fullName>Return_Luggage__c</fullName>
    <label>Return Luggage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>