force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Pick_Off_Point__c.field-meta.xml
<CustomField>
    <fullName>Return_Pick_Off_Point__c</fullName>
    <label>Return Drop Off Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>