force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Time_Invsion__c.field-meta.xml
<CustomField>
    <fullName>Return_Time_Invsion__c</fullName>
    <formula>IF(ISNULL(Return_Departure_Time__c), &apos;&apos;, LEFT(TEXT(Return_Departure_Time__c), 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Time Invsion</label>
    <type>Text</type>
</CustomField>