force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Use_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Use_Time__c</fullName>
    <formula>IF(
ISBLANK(Return_Vehicle_Schedule__r.Use_Time__c),
NULL,
(Return_Vehicle_Schedule__r.Use_Time__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Use Time</label>
    <type>Text</type>
</CustomField>