force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Vehicle_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Vehicle_Run_Time__c</fullName>
    <label>Return Vehicle Run Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>