force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Return_Vehicle_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Return_Vehicle_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Vehicle Schedule</label>
    <referenceTo>Vehicle_Allocation_Schedule__c</referenceTo>
    <relationshipLabel>Vehical Bookings (Return Vehicle Schedule)</relationshipLabel>
    <relationshipName>Vehical_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>