force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/ReturnFlight__c.field-meta.xml
<CustomField>
    <fullName>ReturnFlight__c</fullName>
    <formula>Exhibition_Arrangement__r.Return_Flight_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReturnAirline</label>
    <type>Text</type>
</CustomField>