force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Tips__c.field-meta.xml
<CustomField>
    <fullName>Tips__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tips</label>
    <type>Checkbox</type>
</CustomField>