force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/User_Time__c.field-meta.xml
<CustomField>
    <fullName>User_Time__c</fullName>
    <formula>Vehicle_Allocation_Schedule__r.Use_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Time</label>
    <type>Text</type>
</CustomField>