force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Vehical_Driver__c.field-meta.xml
<CustomField>
    <fullName>Vehical_Driver__c</fullName>
    <label>Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>