force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Vehicle_Allocation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Allocation_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>用于定义车辆接驳时间</description>
    <label>Vehicle Allocation Schedule</label>
    <referenceTo>Vehicle_Allocation_Schedule__c</referenceTo>
    <relationshipLabel>Vehical Bookings</relationshipLabel>
    <relationshipName>Vehical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>