force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Vehicle_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Run_Time__c</fullName>
    <label>Vehicle Run Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>