force-app/main/default/objects/Exhibition_Vehical_Booking__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ShuttleBus</fullName>
                <label>大巴</label>
            </value>
            <value>
                <fullName>PickOff</fullName>
                <label>送机</label>
            </value>
            <value>
                <fullName>PickUp</fullName>
                <label>接机</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>