force-app/main/default/objects/Exhibition_Vehical_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Internal_Registration__c</columns>
    <columns>Exhibition_Arrangement__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Date__c</columns>
    <columns>Pick_Up_Point__c</columns>
    <columns>Pick_Off_Point__c</columns>
    <columns>Departure_Time__c</columns>
    <columns>Plate_Number__c</columns>
    <columns>DepartureAirline__c</columns>
    <columns>ReturnFlight__c</columns>
    <columns>Vehical_Driver__c</columns>
    <columns>Is_Arranged__c</columns>
    <columns>Hotel_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>IFA</value>
    </filters>
    <filters>
        <field>If_Cancel__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>