force-app/main/default/objects/Exhibition_Vehical_Booking__c/listViews/Copy_of_All_IFA2024.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_IFA2024</fullName>
    <columns>Internal_Registration__c</columns>
    <columns>Exhibition_Arrangement__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Date__c</columns>
    <columns>Pick_Up_Point__c</columns>
    <columns>Pick_Off_Point__c</columns>
    <columns>Expo_Vehicle_Info__c</columns>
    <columns>Departure_Time__c</columns>
    <columns>Plate_Number__c</columns>
    <columns>DepartureAirline__c</columns>
    <columns>ReturnFlight__c</columns>
    <columns>Hotel_Name__c</columns>
    <columns>NAME</columns>
    <columns>IfCommander__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>IFA</value>
    </filters>
    <filters>
        <field>Vehicle_Type__c</field>
        <operation>equals</operation>
        <value>PickUp</value>
    </filters>
    <label>2024IFA Vehicle Info</label>
</ListView>