force-app/main/default/objects/Exhibition_Vehical_Booking__c/listViews/Not_Arranged_Vehical.listView-meta.xml
<ListView>
    <fullName>Not_Arranged_Vehical</fullName>
    <columns>NAME</columns>
    <columns>Exhibition_Management__c</columns>
    <columns>Is_Arranged__c</columns>
    <columns>Date__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Departure_Time__c</columns>
    <columns>Internal_Registration__c</columns>
    <columns>Designated_Hotel__c</columns>
    <columns>Hotel_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Arranged__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>135</value>
    </filters>
    <label>未安排车辆信息</label>
</ListView>