force-app/main/default/objects/Exhibition_Vehical_Booking__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>NAME</columns>
    <columns>Guest_Name_CN__c</columns>
    <columns>Arrival_Mode__c</columns>
    <columns>Pick_Up_Point__c</columns>
    <columns>Return_Mode__c</columns>
    <columns>Return_Date__c</columns>
    <columns>Return_Flight_No__c</columns>
    <columns>Return_Need_Vehicle__c</columns>
    <columns>Return_Departure_Time__c</columns>
    <columns>Return_Pick_Off_Point__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoInfo_Id__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>